--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -33,3 +33,5 @@ social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.10
+gunicorn==20.0.4
+psycopg2-binary==2.8.6
