--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,9 +15,7 @@ services:
     env_file:
       - ./.env
   web:
-    build:
-      context: ../backend/foodgram
-      dockerfile: Dockerfile
+    image: aalexey/foodgram:latest
     restart: always
     volumes:
       - static_value:/app/static/
