--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     env_file:
       - ./.env
   web:
+    context: ../
     image: aalexey/foodgram:latest
     restart: always
     volumes:
@@ -23,7 +24,7 @@ services:
     depends_on:
       - db
     env_file:
-      - ./.env
+      - ./infra/.env
   nginx:
     image: nginx:1.19.3
     ports:
