--- a/.github/workflows/foodgram.yml
+++ b/.github/workflows/foodgram.yml
@@ -71,6 +71,7 @@ jobs:
             echo 'SECRET_KEY=${{ secrets.SECRET_KEY }}' >> .env
             sudo docker pull aalexey/foodgram:latest
             sudo docker-compose up -d
+            sudo docker-compose exec web python manage.py collectstatic --no-input
             sudo docker system prune -af
 
   send_message:
